fix page topic spacing issues
git-svn-id: https://svn.otpartners.com/svn/Poses/trunk@2523 7f4e098a-8ec1-c442-913e-02cc3c41ae5c

--- a/UnderstoodDotOrg.Web/Presentation/Includes/css.source/layout.scss
+++ b/UnderstoodDotOrg.Web/Presentation/Includes/css.source/layout.scss
@@ -1522,6 +1522,14 @@ footer#footer-page {
       min-height: 185px;
     }
 
+    h1 {
+
+      @include bp($bp-medium) {
+        padding-right: 30%;
+      }
+
+    }
+
   }
 
   &.has-subhead {
